tests/errors/cpp5.f90
program cpp5
implicit none
#include "cpp5.h"
x = (2+3)*5
print *, x, C123
end program
